node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-example-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-example
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
      - name: node-example
        image: janakisasidhar1/node-example:latest
        ports:
        - containerPort: 3000
