node/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-example
  name: node-example
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-example
  type: ClusterIP
