node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-example
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: node.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-example
            port:
              number: 3000

# kubectl describe ingress node-example
# For any errors/events
